--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,24 @@
+@misc{kasner2020improving,
+      title={Improving Fluency of Non-Autoregressive Machine Translation},
+      author={Zdeněk Kasner and Jindřich Libovický and Jindřich Helcl},
+      year={2020},
+      eprint={2004.03227},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+
+@inproceedings{germann2020university,
+    title = "The {U}niversity of {E}dinburgh{'}s submission to the {G}erman-to-{E}nglish and {E}nglish-to-{G}erman Tracks in the {WMT} 2020 News Translation and Zero-shot Translation Robustness Tasks",
+    author = "Germann, Ulrich",
+    booktitle = "Proceedings of the Fifth Conference on Machine Translation",
+    month = nov,
+    year = "2020",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/2020.wmt-1.18",
+    pages = "197--201",
+}
+
 @article{qian2020glancing,
   title =	 {Glancing Transformer for Non-Autoregressive Neural Machine
                   Translation},
@@ -2589,6 +2610,35 @@
   pages =	 {253--260},
   publisher =	 {Association for Computational Linguistics},
   year =	 2018
+}
+
+@inproceedings{libovicky2018end,
+    title = "End-to-End Non-Autoregressive Neural Machine Translation with
+                  Connectionist Temporal Classification",
+    author = "Libovick{\'y}, Jind{\v{r}}ich and Helcl, Jind{\v{r}}ich",
+    booktitle = "Proceedings of the 2018 Conference on Empirical Methods in
+                  Natural Language Processing",
+    month = oct # "-" # nov,
+    year = "2018",
+    address = "Brussels, Belgium",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/D18-1336",
+    doi = "10.18653/v1/D18-1336",
+    pages = "3016--3021",
+    abstract = "Autoregressive decoding is the only part of
+                  sequence-to-sequence models that prevents them from massive
+                  parallelization at inference time. Non-autoregressive models
+                  enable the decoder to generate all output symbols
+                  independently in parallel. We present a novel
+                  non-autoregressive architecture based on connectionist
+                  temporal classification and evaluate it on the task of neural
+                  machine translation. Unlike other non-autoregressive methods
+                  which operate in several steps, our model can be trained
+                  end-to-end. We conduct experiments on the WMT
+                  English-Romanian and English-German datasets. Our models
+                  achieve a significant speedup over the autoregressive models,
+                  keeping the translation quality comparable to other
+                  non-autoregressive models.",
 }
 
 @inproceedings{libovicky2018multimodal,
