--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,32 @@
+@inproceedings{espla-etal-2019-paracrawl,
+  title =	 "{P}ara{C}rawl: Web-scale parallel corpora for the languages
+                  of the {EU}",
+  author =	 "Espl{\`a}, Miquel and Forcada, Mikel and
+                  Ram{\'\i}rez-S{\'a}nchez, Gema and Hoang, Hieu",
+  booktitle =	 "Proceedings of Machine Translation Summit XVII Volume 2:
+                  Translator, Project and User Tracks",
+  month =	 aug,
+  year =	 "2019",
+  address =	 "Dublin, Ireland",
+  publisher =	 "European Association for Machine Translation",
+  url =		 "https://www.aclweb.org/anthology/W19-6721",
+  pages =	 "118--119",
+}
+
+@article{schwenk2019wikimatrix,
+  title={Wikimatrix: Mining 135m parallel sentences in 1620 language pairs from wikipedia},
+  author={Schwenk, Holger and Chaudhary, Vishrav and Sun, Shuo and Gong, Hongyu and Guzm{\'a}n, Francisco},
+  journal={arXiv preprint arXiv:1907.05791},
+  year={2019}
+}
+
+@book{zipf1949human,
+  author = {Zipf, George Kingsley},
+  title = {Human Behavior and the Principle of Least Effort},
+  publisher = {Addison-Wesley},
+  year = 1949
+}
+
 @misc{kasner2020improving,
       title={Improving Fluency of Non-Autoregressive Machine Translation},
       author={Zdeněk Kasner and Jindřich Libovický and Jindřich Helcl},
@@ -2331,6 +2360,19 @@
   year =	 2004
 }
 
+@inproceedings{rozis-skadins-2017-tilde,
+    title = "Tilde {MODEL} - Multilingual Open Data for {EU} Languages",
+    author = "Rozis, Roberts  and
+      Skadi{\c{n}}{\v{s}}, Raivis",
+    booktitle = "Proceedings of the 21st Nordic Conference on Computational Linguistics",
+    month = may,
+    year = "2017",
+    address = "Gothenburg, Sweden",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/W17-0235",
+    pages = "263--265",
+}
+
 @inproceedings{koehn2005europarl,
   author =	 {Koehn, Philipp},
   title =	 {Europarl: A parallel corpus for statistical machine
@@ -3377,7 +3419,7 @@
   year =	 2016
 }
 
-@inproceedings{sennrich2016bpe,
+@inproceedings{sennrich2016neural,
   author =	 {Sennrich, Rico and Haddow, Barry and Birch, Alexandra},
   title =	 {Neural Machine Translation of Rare Words with Subword Units},
   booktitle =	 {Proceedings of the 54th Annual Meeting of the Association for
