notes on structure, dataset description in experiments chapter

--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -10,11 +10,14 @@ In this chapter, we describe the performed experiments. \JH{co dodat?}
 
 \paragraph{English -- German.} For our English-to-German models, we take
 dataset created and published by \citet{germann2020university}. The dataset
-consists of three parts. First, there is clean parallel data from Europarl
-\citep{todo}, Rapid \citep{todo}, and News Commentary \citep{todo}. Second, the
-dataset contains crawled paralell data from the Web, which are considered
-noisy. These sources include Paracrawl \citep{todo}, Common Crawl \citep{todo},
-and WikiMatrix \citep{todo}. Third, the dataset contains backtranslated
+consists of three parts. First, there is clean parallel data from the Europarl
+corpus \citep{koehn2005europarl}, the Tilde MODEL -- RAPID corpus
+\citep{rozis-skadins-2017-tilde}, and News Commentary corpus from OPUS
+\citep{tiedemann2012opus}. Second, the dataset contains crawled parallel data
+from the Web, which are considered noisy. These sources include Paracrawl
+\citep{espla-etal-2019-paracrawl}, Common
+Crawl\footnote{\url{http://commoncrawl.org/}}, and WikiMatrix
+\citep{schwenk2019wikimatrix}. Third, the dataset contains backtranslated
 sentences of originally monolingual News Crawl datasets from years 2008 to
 2017, in both translation directions. The details of the data sizes are given
 in Table \ref{tab:ende-data-sizes}.
